grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $.module_docstring,
      $.pragma_directive,
      $.import_statement,
      $.from_import_statement,
      $.struct_declaration,
      $.interface_declaration,
      $.event_declaration,
      $.enum_declaration,
      $.flag_declaration,
      $.uses_statement,
      $.initializes_statement,
      $.implements_statement,
      $.exports_declaration,
      $.function_definition,
      $.interface_stub_definition,
      $.constant_declaration,
      $.state_variable_declaration,
      $._newline,
    ),

    module_docstring: $ => seq(
      $.docstring,
    ),

    import_statement: $ => seq(
      "import",
      $.import_item,
      repeat(seq(",", $.import_item)),
      optional(","),
      $._newline,
    ),

    from_import_statement: $ => seq(
      "from",
      $.relative_import_path,
      "import",
      choice(
        "*",
        seq("(", $.parenthesized_import_list, optional(","), ")"),
        $.import_list,
      ),
      $._newline,
    ),

    dotted_name: $ => sep1($.identifier, "."),

    relative_import_path: $ => choice(
      $.dotted_name,
      repeat1("."),
      seq(repeat1("."), $.dotted_name),
    ),

    import_item: $ => seq(
      $.dotted_name,
      optional(seq("as", $.identifier)),
    ),

    import_list: $ => prec.right(seq(
      $.import_item,
      repeat(seq(",", optional($._newline), $.import_item)),
      optional(seq(",", optional($._newline))),
    )),

    parenthesized_import_list: $ => prec.right(seq(
      repeat($._newline),
      $.import_item,
      repeat(seq(repeat($._newline), ",", repeat($._newline), $.import_item)),
      optional(seq(repeat($._newline), ",")),
      repeat($._newline),
    )),

    imported_type: $ => seq($.identifier, repeat1(seq(".", $.identifier))),

    struct_declaration: $ => seq(
      "struct",
      field("name", $.identifier),
      ":",
      declarationBody($, $.struct_member),
    ),

    struct_member: $ => seq(
      field("name", $.identifier),
      ":",
      field("type", $.type),
      $._newline,
    ),


    interface_declaration: $ => seq(
      "interface",
      field("name", $.identifier),
      ":",
      declarationBody($, $.interface_member),
    ),

    interface_member: $ => seq(
      choice(
        seq(
          $.function_signature,
          ":",
          $.mutability,
          $._newline,
        ),
        seq(
          $.function_signature,
          ":",
          declarationBody($, seq($.mutability, $._newline)),
        ),
      ),
    ),


    event_declaration: $ => seq(
      "event",
      field("name", $.identifier),
      ":",
      choice(
        seq("pass", $._newline),
        declarationBody($, choice($.event_member, $.pass_statement)),
      ),
    ),

    event_member: $ => seq(
      field("name", $.identifier),
      ":",
      field("type", choice($.indexed_type, $.type)),
      $._newline,
    ),


    indexed_type: $ => seq(
      "indexed",
      "(",
      repeat($._soft_line_break),
      $.type,
      softBreakTail($),
      ")",
    ),

    flag_declaration: $ => seq(
      "flag",
      field("name", $.identifier),
      ":",
      declarationBody($, bareIdentifierLine($)),
    ),

    implements_statement: $ => seq(
      "implements",
      ":",
      field("value", choice($.identifier, $.imported_type)),
      $._newline,
    ),

    initializes_statement: $ => seq(
      "initializes",
      ":",
      field("value", $._initializes_value),
      $._newline,
    ),

    _initializes_value: $ => choice(
      $.identifier,
      $.imported_type,
      $.module_initialization,
      seq(
        "(",
        repeat($._soft_line_break),
        $._initializes_value,
        softBreakTail($),
        ")",
      ),
    ),

    module_initialization: $ => seq(
      field("module", choice($.identifier, $.imported_type)),
      "[",
      $.module_binding_list,
      "]",
    ),

    module_binding_list: $ => choice(
      seq(
        $.module_binding,
        repeat(seq(",", $.module_binding)),
        optional(","),
        softBreakTail($),
      ),
      seq(
        repeat1($._soft_line_break),
        $.module_binding,
        repeat(seq(",", repeat($._soft_line_break), $.module_binding)),
        optional(seq(",", repeat($._soft_line_break))),
        repeat($._soft_line_break),
      ),
    ),

    module_binding: $ => seq(
      field("name", $.identifier),
      repeat($._soft_line_break),
      ":=",
      repeat($._soft_line_break),
      field("value", $.atom_expression),
    ),

    exports_declaration: $ => seq(
      "exports",
      ":",
      choice(
        $.attribute,
        alias(choice($.tuple, $.multiline_tuple), $.tuple),
      ),
      $._newline,
    ),

    constant_declaration: $ => seq(
      field("name", $.identifier),
      ":",
      choice(
        $.constant_type,
        seq("public", "(", $.constant_type, ")"),
      ),
      "=",
      field("value", $._value_expression),
      $._newline,
    ),

    constant_type: $ => seq(
      "constant",
      "(",
      optional($._soft_line_break),
      $.type,
      softBreakTail($),
      ")",
    ),

    variable_annotation: $ => seq(
      choice("public", "reentrant", "immutable", "transient"),
      "(",
      optional($._soft_line_break),
      field("value", choice($.variable_annotation, $.type)),
      softBreakTail($),
      ")",
    ),

    state_variable_declaration: $ => seq(
      field("name", $.identifier),
      ":",
      field("type", choice($.variable_annotation, $.type)),
      optional(seq("=", field("value", $._value_expression))),
      $._newline,
    ),

    function_definition: $ => seq(
      repeat(seq($.decorator, repeat($._newline))),
      $.function_signature,
      ":",
      $.block,
    ),

    interface_stub_definition: $ => seq(
      repeat(seq($.decorator, repeat($._newline))),
      $.function_signature,
      ":",
      $.ellipsis,
      $._newline,
    ),

    function_signature: $ => seq(
      "def",
      field("name", $.identifier),
      "(",
      optional($.parameter_list),
      optional($._soft_line_break_end),
      ")",
      optional(seq("->", field("return_type", $.type))),
    ),

    parameter_list: $ => prec.right(choice(
      commaSeparatedWithSoftBreaks($, $.parameter),
      multilineCommaSeparatedWithSoftBreaks($, $.parameter),
    )),

    decorator: $ => seq(
      "@",
      field("name", $.identifier),
      optional(seq("(", optional($.argument_list), optional($._soft_line_break_end), ")")),
      $._newline,
    ),

    parameter: $ => prec.right(choice(
      seq(
        field("name", $.identifier),
        repeat($._soft_line_break),
        ":",
        repeat($._soft_line_break),
        field("type", $.type),
        repeat($._soft_line_break),
        "=",
        repeat($._soft_line_break),
        field("default", $.expression),
      ),
      seq(
        field("name", $.identifier),
        repeat($._soft_line_break),
        ":",
        repeat($._soft_line_break),
        field("type", $.type),
      ),
    )),

    mutability: _ => choice("view", "pure", "nonpayable", "payable"),

    block: $ => seq(
      $._newline,
      repeat($._newline),
      $._indent,
      repeat1($.statement),
      $._dedent,
    ),

    pass_statement: $ => seq("pass", $._newline),

    return_statement: $ => choice(
      seq("return", $._newline),
      seq(
        "return",
        field("value", $.expression),
        ",",
        $._newline,
      ),
      seq(
        "return",
        field("value", $.expression),
        repeat1(seq(",", $.expression)),
        optional(","),
        $._newline,
      ),
      seq(
        "return",
        field("value", $.expression),
        $._newline,
      ),
    ),

    assert_statement: $ => seq(
      "assert",
      $.expression,
      optional(seq(",", $.expression)),
      $._newline,
    ),

    expression_statement: $ => seq(
      $.expression,
      $._newline,
    ),

    argument: $ => choice(
      $.keyword_argument,
      continuedExpression($),
    ),

    argument_list: $ => prec.right(choice(
      commaSeparatedWithSoftBreaks($, $.argument),
      multilineCommaSeparatedWithSoftBreaks($, $.argument),
    )),

    _value_expression: $ => choice(
      $.packed_tuple,
      $.expression,
    ),

    conditional_expression: $ => prec.right(PREC.conditional, seq(
      field("consequence", $._expression_without_conditional),
      "if",
      field("condition", $.expression),
      "else",
      field("alternative", $.expression),
    )),

    wrapped_conditional_expression: $ => prec.right(PREC.conditional, seq(
      field("consequence", choice($.wrapped_binary_expression, $.expression)),
      repeat($._soft_line_break),
      "if",
      repeat($._soft_line_break),
      field("condition", choice($.wrapped_binary_expression, $.expression)),
      repeat($._soft_line_break),
      "else",
      repeat($._soft_line_break),
      field("alternative", choice($.wrapped_binary_expression, $.expression)),
    )),

    _expression_without_conditional: $ => choice(
      $.atom_expression,
      $.external_call,
      $.walrus_expression,
      $.not_expression,
      $.binary_expression,
      $.unary_expression,
    ),

    parenthesized_expression: $ => choice(
      seq("(", continuedExpression($), ")"),
      seq(
        "(",
        repeat1($._soft_line_break),
        continuedExpression($),
        softBreakTail($),
        ")",
      ),
    ),

    binary_expression: $ => choice(
      ...[
        ["or", PREC.or],
        ["and", PREC.and],
        ["in", PREC.compare],
        ["==", PREC.compare],
        ["!=", PREC.compare],
        ["<", PREC.compare],
        ["<=", PREC.compare],
        [">", PREC.compare],
        [">=", PREC.compare],
        ["|", PREC.bitwise_or],
        ["^", PREC.bitwise_xor],
        ["&", PREC.bitwise_and],
        ["<<", PREC.shift],
        [">>", PREC.shift],
        ["+", PREC.additive],
        ["-", PREC.additive],
        ["*", PREC.multiplicative],
        ["//", PREC.multiplicative],
        ["/", PREC.multiplicative],
        ["%", PREC.multiplicative],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field("left", $.expression),
          field("operator", operator),
          field("right", $.expression),
        )),
      ),
      prec.right(PREC.power, seq(
        field("left", $.expression),
        field("operator", "**"),
        field("right", $.expression),
      )),
      prec.left(PREC.compare, seq(
        field("left", $.expression),
        field("operator", seq("not", "in")),
        field("right", $.expression),
      )),
    ),

    call: $ => prec(PREC.call, seq(
      field("function", $.atom_expression),
      "(",
      optional($.argument_list),
      optional($._soft_line_break_end),
      ")",
    )),

    wrapped_external_call: $ => prec(PREC.unary, seq(
      field("kind", choice("extcall", "staticcall")),
      repeat1($._soft_line_break),
      field("value", $.atom_expression),
    )),

    attribute: $ => prec.left(PREC.attribute, seq(
      field("value", $.atom_expression),
      ".",
      field("attribute", $.identifier),
    )),

    subscript: $ => prec.left(PREC.attribute, seq(
      field("value", choice($.atom_expression, $.list)),
      "[",
      choice(
        field("index", $.expression),
        seq(
          repeat1($._soft_line_break),
          field("index", $.expression),
          softBreakTail($),
        ),
      ),
      "]",
    )),

    tuple: $ => seq(
      "(",
      commaSep1($.expression),
      optional(","),
      ")",
    ),

    list: $ => choice(
      seq(
        "[",
        optional(commaSep1($.expression)),
        optional(","),
        "]",
      ),
      seq(
        "[",
        optional($._soft_line_break),
        $.expression,
        repeat(seq(optional($._soft_line_break), ",", optional($._soft_line_break), $.expression)),
        optional(seq(optional($._soft_line_break), ",")),
        softBreakTail($),
        "]",
      ),
    ),

    atom_expression: $ => choice(
      $.identifier,
      $.subscript,
      $.attribute,
      $.call,
      $.atom,
    ),

    atom: $ => choice(
      $.decimal,
      $.integer,
      $.hex_string,
      $.triple_quoted_string,
      $.prefixed_string,
      $.prefixed_byte_string,
      $.adjacent_string,
      $.string,
      $.boolean,
      $.ellipsis,
      $.list,
      $.tuple,
      alias($.multiline_tuple, $.tuple),
      $.dict,
      $.special_builtin,
      $.parenthesized_expression,
    ),

    docstring: $ => choice(
      seq('"""', tripleQuotedDoubleBody($), '"""'),
      seq("'''", tripleQuotedSingleBody($), "'''"),
    ),

    docstring_chunk_double: _ => token(prec(3, choice(
      ...DOCSTRING_CHUNK_DOUBLE_PATTERNS,
    ))),

    docstring_newline: _ => token(prec(3, /\n/)),

    triple_quoted_string: $ => tripleQuotedVariants($, [
      "",
      "b",
      "B",
      "r",
      "R",
      "u",
      "U",
      "rb",
      "rB",
      "Rb",
      "RB",
      "br",
      "bR",
      "Br",
      "BR",
    ]),

    continued_adjacent_string: $ => prec.right(seq(
      field("left", adjacentStringSegment($)),
      repeat1(seq(
        repeat1($._soft_line_break),
        field("right", adjacentStringSegment($)),
      )),
    )),

    special_builtin: $ => choice(
      $.empty_builtin,
      $.abi_decode_builtin,
    ),

    empty_builtin: $ => seq(
      "empty",
      "(",
      optional($._soft_line_break),
      $.type,
      softBreakTail($),
      ")",
    ),

    abi_decode_builtin: $ => seq(
      choice("abi_decode", "_abi_decode"),
      "(",
      optional($._soft_line_break),
      $.argument,
      repeat($._soft_line_break),
      ",",
      repeat($._soft_line_break),
      $.type,
      repeat(seq(repeat($._soft_line_break), ",", repeat($._soft_line_break), $.keyword_argument)),
      optional(seq(repeat($._soft_line_break), ",")),
      softBreakTail($),
      ")",
    ),

    postfix_type: $ => prec(3, seq(
      choice(
        $.identifier,
        $.imported_type,
        $.type_call,
        $.tuple_type,
        $.dyn_array_type,
        $.hash_map_type,
        $.string_type,
        $.bytes_type,
      ),
      repeat1(seq(
        "[",
        choice(
          seq(
            commaSep1(choice($.type, $.expression)),
            optional(","),
          ),
          seq(
            repeat1($._soft_line_break),
            choice($.type, $.expression),
            repeat(seq(optional($._soft_line_break), ",", repeat($._soft_line_break), choice($.type, $.expression))),
            optional(seq(optional($._soft_line_break), ",")),
            softBreakTail($),
          ),
        ),
        "]",
      )),
    )),

    tuple_type: $ => seq(
      "(",
      repeat($._soft_line_break),
      $.type,
      repeat(seq(optional($._soft_line_break), ",", repeat($._soft_line_break), $.type)),
      optional(seq(optional($._soft_line_break), ",")),
      softBreakTail($),
      ")",
    ),

    dyn_array_type: $ => prec(2, choice(
      seq(
        "DynArray",
        "[",
        $.type,
        ",",
        $.expression,
        optional(","),
        "]",
      ),
      seq(
        "DynArray",
        "[",
        repeat1($._soft_line_break),
        $.type,
        repeat($._soft_line_break),
        ",",
        repeat($._soft_line_break),
        $.expression,
        optional(seq(repeat($._soft_line_break), ",")),
        softBreakTail($),
        "]",
      ),
    )),

    string_type: $ => prec(2, choice(
      seq("String", "[", $.expression, "]"),
      seq(
        "String",
        "[",
        repeat1($._soft_line_break),
        $.expression,
        softBreakTail($),
        "]",
      ),
    )),

    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,
    boolean: _ => choice("True", "False"),
