test/corpus/docstrings.txt
=========================
Docstrings
=========================

"""module docs"""

@external
def f():
    """function docs"""
    pass

---

(source_file
  (module_docstring
    (docstring
      (docstring_chunk_double)))
  (function_definition
    (decorator
      name: (identifier))
    (function_signature
      name: (identifier))
    (block
      (expression_statement
        (atom_expression
          (atom
            (triple_quoted_string
              (docstring_chunk_double)))))
      (pass_statement))))
