test/corpus/module_system.txt
=========================
Module system
=========================

# pragma version 0.4.3
"""module docs"""

from snekmate.auth import ownable
initializes: ownable
exports: (
    ownable.owner,
    ownable.transfer_ownership,
)

from ..src import OApp
initializes: OApp[ownable := ownable]
exports: (
    OApp.endpoint,
    OApp.setDelegate,
)

---

(source_file
  (module_docstring
    (docstring
      (docstring_chunk_double)))
  (from_import_statement
    (relative_import_path
      (dotted_name
        (identifier)
        (identifier)))
    (import_list
      (import_item
        (dotted_name
          (identifier)))))
  (initializes_statement
    value: (identifier))
  (exports_declaration
    (tuple
      (atom_expression
        (attribute
          value: (atom_expression
            (identifier))
          attribute: (identifier)))
      (atom_expression
        (attribute
          value: (atom_expression
            (identifier))
          attribute: (identifier)))))
  (from_import_statement
    (relative_import_path
      (dotted_name
        (identifier)))
    (import_list
      (import_item
        (dotted_name
          (identifier)))))
  (initializes_statement
    value: (module_initialization
      module: (identifier)
      (module_binding_list
        (module_binding
          name: (identifier)
          value: (atom_expression
            (identifier))))))
  (exports_declaration
    (tuple
      (atom_expression
        (attribute
          value: (atom_expression
            (identifier))
          attribute: (identifier)))
      (atom_expression
        (attribute
          value: (atom_expression
            (identifier))
          attribute: (identifier))))))
