test/corpus/multiline_call_closers.txt
=========================
Multiline call closers
=========================

@internal
def pack(mid_fee: uint256, out_fee: uint256, fee_gamma: uint256):
    packed_fee_params: uint256 = self._pack_3(
        [mid_fee, out_fee, fee_gamma]
    )

@external
def set_threshold(_new_threshold: uint256):
    assert _new_threshold <= len(
        self.committers
    ), "Threshold cannot be greater than number of committers"

---

(source_file
  (function_definition
    (decorator
      (identifier))
    (function_signature
      (identifier)
      (parameter_list
        (parameter
          (identifier)
          (identifier))
        (parameter
          (identifier)
          (identifier))
        (parameter
          (identifier)
          (identifier))))
    (block
      (state_variable_declaration
        (identifier)
        (identifier)
        (atom_expression
          (call
            (atom_expression
              (attribute
                (atom_expression
                  (identifier))
                (identifier)))
            (argument_list
              (argument
                (atom_expression
                  (atom
                    (list
                      (atom_expression
                        (identifier))
                      (atom_expression
                        (identifier))
                      (atom_expression
                        (identifier))))))))))))
  (function_definition
    (decorator
      (identifier))
    (function_signature
      (identifier)
      (parameter_list
        (parameter
          (identifier)
          (identifier))))
    (block
      (assert_statement
        (binary_expression
          (atom_expression
            (identifier))
          (atom_expression
            (call
              (atom_expression
                (identifier))
              (argument_list
                (argument
                  (atom_expression
                    (attribute
                      (atom_expression
                        (identifier))
                      (identifier))))))))
        (atom_expression
          (atom
            (string)))))))
