test/corpus/multiline_call_comments.txt
=========================
Multiline call comments
=========================

@internal
@pure
def append(_cmd: Bytes[64], _to: address) -> Bytes[64]:
    return concat(
        # current cmd
        convert(_cmd, Bytes[32]),
        # recipient
        convert(_to, bytes20),
    )

---

(source_file
  (function_definition
    (decorator
      name: (identifier))
    (decorator
      name: (identifier))
    (function_signature
      name: (identifier)
      (parameter_list
        (parameter
          name: (identifier)
          type: (bytes_type
            (atom_expression
              (atom
                (integer)))))
        (parameter
          name: (identifier)
          type: (identifier)))
      return_type: (bytes_type
        (atom_expression
          (atom
            (integer)))))
    (block
      (return_statement
        value: (atom_expression
          (call
            function: (atom_expression
              (identifier))
            (argument_list
              (comment)
              (argument
                (atom_expression
                  (call
                    function: (atom_expression
                      (identifier))
                    (argument_list
                      (argument
                        (atom_expression
                          (identifier)))
                      (argument
                        (atom_expression
                          (subscript
                            value: (atom_expression
                              (identifier))
                            index: (atom_expression
                              (atom
                                (integer))))))))))
              (comment)
              (argument
                (atom_expression
                  (call
                    function: (atom_expression
                      (identifier))
                    (argument_list
                      (argument
                        (atom_expression
                          (identifier)))
                      (argument
                        (atom_expression
                          (identifier))))))))))))))
